--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>jasonroy7dct</strong> <span>by Jason Hsieh</span></a>
+						<a href="index.html" class="logo"><strong>jasonroy7dct</strong></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -44,7 +44,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Jason Hsieh-an information management student</h1>
+								<h1>Jason Hsieh</h1>
 							</header>
 							<div class="content">
 								<p>A senior student in Fu Jen University Information Management. 
