--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							</header>
 							<div class="content">
 								<p>A senior student in Fu Jen University Information Management. 
-									I'm currently work in Microsoft Taiwan as a technical assistant intern.
+									<br>I'm currently work in Microsoft Taiwan as a technical assistant intern.
 									</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Let's go!</a></li>
