--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/Blogpost.jpg" alt="" />
+										<img src="images/Blogpost.JPG" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="blogpost.html" class="link">Blogpost</a></h3>
