--- a/introduce.html
+++ b/introduce.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="#" class="logo"><strong>jasonroy7dct</strong></a>
+						<a href="index.html" class="logo"><strong>jasonroy7dct</strong></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -205,14 +205,14 @@
 							</section>
 							<section>
 								<div class="contact-method">
-									<span class="icon solid alt fa-linkedin-in"></span>
+									<span class="icon brands alt fa-linkedin"></span>
 									<h3>LinkedIn</h3>
 									<a href="https://www.linkedin.com/in/jason-hsieh-629a02185/">Jason Hsieh</a>
 								</div>
 							</section>
 							<section>
 								<div class="contact-method">
-									<span class="icon solid alt fa-medium"></span>
+									<span class="icon brands alt fa-medium"></span>
 									<h3>Medium</h3>
 									<a href="https://medium.com/@jasonroy7dct">jasonroy7dct</a>
 								</div>
