--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="mailto:jasonroy7dct@gmail.com">jasonroy7dct@gmail.com</a>
+										<a action="mailto:jasonroy7dct@gmail.com" method="post" enctype="text/plain">jasonroy7dct@gmail.com</a>
 									</div>
 								</section>
 								<section>
