--- a/introduce.html
+++ b/introduce.html
@@ -200,7 +200,7 @@
 								<div class="contact-method">
 									<span class="icon solid alt fa-envelope"></span>
 									<h3>Email</h3>
-									<a href="jasonroy7dct@gmail.com">jasonroy7dct@gmail.com</a>
+									<p>jasonroy7dct@gmail.com</p>
 								</div>
 							</section>
 							<section>
