--- a/introduce.html
+++ b/introduce.html
@@ -112,51 +112,79 @@
 								</section>
 
 								<section>
-									<a href="images/introduce_gosky.jpg" class="image">
-										<img src="images/introduce_gosky.jpg" alt="" data-position="center center" />
+									<a href="images/introduce_camp.jpg" class="image">
+										<img src="images/introduce_camp.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>2019.10</h3>
+												<h3>2017.08</h3>
 											</header>
-											<p>Designed a chatbot and participated in GoSky.ai chatbot generation.</p>
+											<p>Organized an activity for freshman.</p>
 
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="images/introduce_youth.jpg" class="image">
-										<img src="images/introduce_youth.jpg" alt="" data-position="top center" />
+									<a href="images/introduce_rural.jpg" class="image">
+										<img src="images/introduce_rural.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>2018.04</h3>
+												<h3>2018.08</h3>
 											</header>
-											<p>Won No.2 in Youth Camp held by Youth Development Administration, Ministry of Education.</p>
+											<p>Held a 8-day camp for rural children.</p>
 
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="images/introduce_host.jpg" class="image">
-										<img src="images/introduce_host.jpg" alt="" data-position="25% 25%" />
+									<a href="images/introduce_teaching.jpg" class="image">
+										<img src="images/introduce_teaching.jpg" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>2017.05</h3>
+												<h3>2018.08</h3>
 											</header>
-											<p>Hosted the department event for the first time in life.</p>
+											<p>Delivered courses to kids.</p>
 
 										</div>
 									</div>
 								</section>
 							</section>
+							<section>
+								<a href="images/introduce_tedx.jpg" class="image">
+									<img src="images/introduce_tedx.jpg" alt="" data-position="center center" />
+								</a>
+								<div class="content">
+									<div class="inner">
+										<header class="major">
+											<h3>2018.09</h3>
+										</header>
+										<p>Acted as PA(Public Address)TEDxFJCU annual event.</p>
+
+									</div>
+								</div>
+							</section>
+							<section>
+								<a href="images/introduce_tedx2.jpg" class="image">
+									<img src="images/introduce_tedx2.jpg" alt="" data-position="top center" />
+								</a>
+								<div class="content">
+									<div class="inner">
+										<header class="major">
+											<h3>2018.09</h3>
+										</header>
+										<p>TEDxFJCU annual event with over 100+ people involved.</p>
+
+									</div>
+								</div>
+							</section>
 
 						<!-- Three -->
-							<section id="three">
+							<!--section id="three">
 								<div class="inner">
 									<header class="major">
 										<h2>Massa libero</h2>
@@ -168,7 +196,7 @@
 								</div>
 							</section>
 
-					</div>
+					</div -->
 
 				<!-- Contact -->
 				<section id="contact">
