--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 										<img src="images/jason.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="introduce.html" class="link">Introduce</a></h3>
+										<h3><a href="introduce.html" class="link">Introduction</a></h3>
 										<p>Form of me</p>
 									</header>
 								</article>
