--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="introduce.html">Introduce</a></li>
+							<li><a href="introduction.html">Introduction</a></li>
 							<li><a href="microsoft.html">Internship</a></li>
 							<li><a href="care&match.html">Care&Match</a></li>
 							<li><a href="life.html">Life</a></li>
@@ -67,7 +67,7 @@
 										<img src="images/jason.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="introduce.html" class="link">Introduction</a></h3>
+										<h3><a href="introduction.html" class="link">Introduction</a></h3>
 										<p>Form of me</p>
 									</header>
 								</article>
