--- a/introduction.html
+++ b/introduction.html
@@ -186,6 +186,21 @@
 										</div>
 									</div>
 								</section>
+
+								<section>
+									<a href="images/introduce_aacsb.jpg" class="image">
+										<img src="images/introduce_aacsb.jpg" alt="" data-position="25% 25%" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h3>2019.11</h3>
+											</header>
+											<p>AACSB departments' representives in FJCU.</p>
+
+										</div>
+									</div>
+								</section>
 								
 							</section>
 							
