--- a/introduction.html
+++ b/introduction.html
@@ -32,7 +32,7 @@
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="introduction.html">Introduction</a></li>
-						<li><a href="microsoft.html">Internship</a></li>
+						<li><a href="internship.html">Internship</a></li>
 						<li><a href="care&match.html">Care&Match</a></li>
 						<li><a href="life.html">Life</a></li>
 						<li><a href="photography.html">Photography</a></li>
