--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="introduction.html">Introduction</a></li>
-							<li><a href="microsoft.html">Internship</a></li>
+							<li><a href="internship.html">Internship</a></li>
 							<li><a href="care&match.html">Care&Match</a></li>
 							<li><a href="life.html">Life</a></li>
 							<li><a href="photography.html">Photography</a></li>
@@ -76,7 +76,7 @@
 										<img src="images/Microsoft.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="microsoft.html" class="link">Internship</a></h3>
+										<h3><a href="internship.html" class="link">Internship</a></h3>
 										<p>Intership in Microsoft Taiwan</p>
 									</header>
 								</article>
