--- a/internship.html
+++ b/internship.html
@@ -81,7 +81,7 @@
 											<header class="major">
 												<h3>Work</h3>
 											</header>
-											<p>>Assist Database Work(Azure DevOps, SQL Stored Procedure, etc.) in SKMH(HIS) using MS SQL Server.</p>
+											<p>Assist Database Work(Azure DevOps, SQL Stored Procedure, etc.) in SKMH(HIS) using MS SQL Server.</p>
 
 										</div>
 									</div>
