--- a/internship.html
+++ b/internship.html
@@ -49,7 +49,7 @@
 								<img src="images/microsoft_banner.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>One-year intership in Microsoft Taiwan</h1>
+								<h1>One-year internship in Microsoft Taiwan</h1>
 							</header>
 							<div class="content">
 								<p>Road fulls of surprise and dreams, here in Microsoft...</p>
