--- a/life.html
+++ b/life.html
@@ -145,8 +145,8 @@
 									</div>
 								</section>
 								<section>
-									<a href="life_ball2.PNG" class="image">
-										<img src="life_ball2.PNG" alt="" data-position="25% 25%" />
+									<a href="life_ball2.JPG" class="image">
+										<img src="life_ball2.JPG" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
