--- a/blogpostcodingangels.html
+++ b/blogpostcodingangels.html
@@ -66,6 +66,39 @@
 										<br><b>#GirlsTECHgether</b>
 										<br><b>#2019CodingAngels</b></p>
 									</div>
+
+									<section class="main items">
+										<article class="item">
+											<header>
+												<a href="images/blogpostcodingangels_1.jpg"><img src="images/blogpostcodingangels_1.jpg" alt="" /></a>
+											</header>
+										</article>
+										<article class="item">
+											<header>
+												<a href="images/blogpostcodingangels_2.jpg"><img src="images/blogpostcodingangels_2.jpg" alt="" /></a>
+											</header>
+										</article>
+										<article class="item">
+											<header>
+												<a href="images/blogpostcodingangels_3.jpg"><img src="images/blogpostcodingangels_3.jpg" alt="" /></a>
+											</header>
+										</article>
+										<article class="item">
+											<header>
+												<a href="images/blogpostcodingangels_4.jpg"><img src="images/blogpostcodingangels_4.jpg" alt="" /></a>
+											</header>
+										</article>
+										<article class="item">
+											<header>
+												<a href="images/blogpostcodingangels_5.jpg"><img src="images/blogpostcodingangels_5.jpg" alt="" /></a>
+											</header>
+										</article>
+										<article class="item">
+											<header>
+												<a href="images/blogpostcodingangels_6.jpg"><img src="images/blogpostcodingangels_6.jpg" alt="" /></a>
+											</header>
+										</article>
+										</section>
 							</section>
 
 					</div>
