--- a/blogpostcodingangels.html
+++ b/blogpostcodingangels.html
@@ -67,38 +67,29 @@
 										<br><b>#2019CodingAngels</b></p>
 									</div>
 
-									<section class="main items">
-										<article class="item">
-											<header>
-												<a href="images/blogpostcodingangels_1.jpg"><img src="images/blogpostcodingangels_1.jpg" alt="" /></a>
-											</header>
-										</article>
-										<article class="item">
-											<header>
-												<a href="images/blogpostcodingangels_2.jpg"><img src="images/blogpostcodingangels_2.jpg" alt="" /></a>
-											</header>
-										</article>
-										<article class="item">
-											<header>
-												<a href="images/blogpostcodingangels_3.jpg"><img src="images/blogpostcodingangels_3.jpg" alt="" /></a>
-											</header>
-										</article>
-										<article class="item">
-											<header>
-												<a href="images/blogpostcodingangels_4.jpg"><img src="images/blogpostcodingangels_4.jpg" alt="" /></a>
-											</header>
-										</article>
-										<article class="item">
-											<header>
-												<a href="images/blogpostcodingangels_5.jpg"><img src="images/blogpostcodingangels_5.jpg" alt="" /></a>
-											</header>
-										</article>
-										<article class="item">
-											<header>
-												<a href="images/blogpostcodingangels_6.jpg"><img src="images/blogpostcodingangels_6.jpg" alt="" /></a>
-											</header>
-										</article>
-										</section>
+									
+							</section>
+
+							<!-- Two -->
+							<section id="two" class="spotlights">
+								<section>
+									<a href="images/blogpostcodingangels_1.jpg" class="image">
+										<img src="images/blogpostcodingangels_1.jpg" alt="" data-position="center center" />
+									</a>
+
+								</section>
+								<section>
+									<a href="images/blogpostcodingangels_2.jpg" class="image">
+										<img src="images/blogpostcodingangels_2.jpg" alt="" data-position="top center" />
+									</a>
+
+								</section>
+								<section>
+									<a href="images/blogpostcodingangels_3.jpg" class="image">
+										<img src="images/blogpostcodingangels_3.jpg" alt="" data-position="25% 25%" />
+									</a>
+								</section>
+								
 							</section>
 
 					</div>
