--- a/blogpostcodingangels.html
+++ b/blogpostcodingangels.html
@@ -84,6 +84,9 @@
 								</section>
 						
 								<section>
+									<a href="images/blogpostcodingangels_4.jpg" class="image">
+										<img src="images/blogpostcodingangels_4.jpg" alt="" data-position="center center" />
+									</a>
 									<a href="images/blogpostcodingangels_3.jpg" class="image">
 										<img src="images/blogpostcodingangels_3.jpg" alt="" data-position="25% 25%" />
 									</a>
