--- a/internship.html
+++ b/internship.html
@@ -73,7 +73,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="images/microsoft_db.jpg" class="image">
+									<a href="images/microsoft_dbteams.jpg" class="image">
 										<img src="images/microsoft_db.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
