--- a/internship.html
+++ b/internship.html
@@ -74,7 +74,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="images/microsoft_dbteams.jpg" class="image">
-										<img src="images/microsoft_db.jpg" alt="" data-position="center center" />
+										<img src="images/microsoft_dbteams.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
