--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/Microsoft.jpg" alt="" />
+										<img src="images/microsoft_grad.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="internship.html" class="link">Internship</a></h3>
